added grpc notification implementation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "watch": "tsc -w",
-    "build": "npm-run-all clean tsc ",
+    "build": "npm-run-all clean tsc  build:stubs",
     "dev:start": "nodemon dist/app.js",
     "dev": "ts-node index.ts",
     "start": "node dist/app.js",
@@ -17,14 +17,14 @@
     "generate": "prisma generate",
     "rollBack": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "build:stubs": "sh ./script.sh ./user.proto ./src/proto",
+    "build:stubs": "sh ./script.sh ",
     "deploy": "npm run build && npm run build:stubs && docker build -t omondibrian/admin . && docker push  omondibrian/admin"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.7.2",
+    "@grpc/grpc-js": "^1.7.3",
     "@grpc/proto-loader": "^0.7.3",
     "@prisma/client": "^4.5.0",
     "bcrypt": "^5.1.0",
@@ -66,6 +66,7 @@
     "@types/randomstring": "^1.1.8",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "grpc-tools": "^1.11.3",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
