--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ PORT=<----PORT---->
 NODE_ENV=<----ENV---->
 SECREATE_TOKEN=<----TOKEN---->
 BACKEND_IP<----IP_ADDR---->
+
+# grpc
+GRPC_PORT='8050'
+GRPC_HOST='0.0.0.0'
